--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -20,9 +20,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Debug info
         run: |
-          echo "Repository: ${{ github.repository }}"
-          echo "Branch: ${{ github.ref }}"
-          echo "Event: ${{ github.event_name }}"
+          echo "Repository: ${{ secrets }}"
       - run: npm install
       - run: npm run build
         env:
