--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -6,44 +6,29 @@ on:
       - main
     paths:
       - 'packages/container/**'
-  workflow_dispatch:
+
+defaults:
+  run:
+    working-directory: packages/container
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16'  # specify the Node.js version if needed
-
-      - name: Install dependencies
-        run: npm install
-        working-directory: packages/container
-
-      - name: Build project
-        run: npm run build
-        working-directory: packages/container
+      - uses: actions/checkout@v2
+      - run: npm install
+      - run: npm run build
         env:
           PRODUCTION_DOMAIN: ${{ secrets.PRODUCTION_DOMAIN }}
 
-      - name: Sync files to S3
-        uses: shinyinc/action-aws-cli@v1.2
-        with:
-          args: s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
+      - uses: shinyinc/action-aws-cli@v1.2
+      - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ap-south-1
 
-      # Uncomment and configure if needed
-      - name: Invalidate CloudFront
-        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths "/container/latest/index.html"
+      - run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths "/container/latest/index.html"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ap-south-1  # Optional if not already set globally
