--- a/.github/workflows/marketing.yml
+++ b/.github/workflows/marketing.yml
@@ -1,7 +1,10 @@
 name: deploy-marketing
 
 on:
-  push:
+  # push:
+  #   branches:
+  #     - main
+  pull_request:
     branches:
       - main
     paths:
