--- a/.github/workflows/marketing.yml
+++ b/.github/workflows/marketing.yml
@@ -1,9 +1,9 @@
 name: deploy-marketing
 
 on:
-  # push:
-  #   branches:
-  #     - main
+  push:
+    branches:
+      - container-dev
   pull_request:
     branches:
       - main
