--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -25,8 +25,7 @@ jobs:
         env:
           PRODUCTION_DOMAIN: ${{ secrets.PRODUCTION_DOMAIN }}
 
-      - name: Sync files to S3
-        uses: shinyinc/action-aws-cli@v1.2
+      - uses: shinyinc/action-aws-cli@v1.2
         run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
